// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mailto, default render 1`] = `
<a
  href="mailto:#?subject=Hi"
>
  text
</a>
`;

exports[`Mailto, to only, default render 1`] = `
<a
  href="mailto:#null"
>
  text
</a>
`;

exports[`PlainMailto with color, default render 1`] = `
.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #0000ff;
}

.c0:visited: {
  color: #0000ff;
}

<a
  c="#0000ff"
  className="c0"
  href="mailto:#?subject=Hi"
>
  text
</a>
`;

exports[`PlainMailto with color, to only, default render 1`] = `
.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #0000ff;
}

.c0:visited: {
  color: #0000ff;
}

<a
  c="#0000ff"
  className="c0"
  href="mailto:#null"
>
  text
</a>
`;

exports[`PlainMailto, default render 1`] = `
.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<a
  className="c0"
  href="mailto:#?subject=Hi"
>
  text
</a>
`;

exports[`PlainMailto, to only, default render 1`] = `
.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<a
  className="c0"
  href="mailto:#null"
>
  text
</a>
`;
